istio-1.18.1/istio-controll.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-order-install-network-rule
  namespace: airobotrental
spec:
  hosts:
  - order
  - install
  - payment
  - airobot
  http:
  - route:
    - destination:
        host: order
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx,gateway-error,connect-failure,refused-stream
    timeout: 3s
  - route:
    - destination:
        host: install
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx,gateway-error,connect-failure,refused-stream
    timeout: 3s
  - route:
    - destination:
        host: payment
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx,gateway-error,connect-failure,refused-stream
    timeout: 3s
  - route:
    - destination:
        host: airobot
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: 5xx,retriable-4xx,gateway-error,connect-failure,refused-stream
    timeout: 3s
